Loading movies larger than 4GB in size fails in Official Preview VS 2013 from buildbot. #40157

Closed
opened 2014-05-12 14:08:41 +02:00 by Lars Soderlind · 9 comments

System Information
Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600

Blender Version
Broken: blender-2.70-47e9057-win64-vc12
Works: blender-2.70-47e9057-win64

Short description of error
Loading movies larger than 4GB in size fails in Official Preview VS 2013 from buildbot.

If I try to load a movie that has a filesize larger than 4GB in the Video Sequence Editor or Movie Clip Editor, it fails to load and I get an error message in the system console saying:

anim file doesn't exist:

VSE also shows an error dialog that file failed to load. MCE doesn't show that.

This only happens in the "Official Preview VS 2013" versions from buildbot. The other "Official" versions from buildbot works fine.

Exact steps for others to reproduce the error
Open Blender.
Choose Video Editing layout.
Select Add - Movie and open a movie bigger than 4GB.
Check system console for error message.

**System Information** Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600 **Blender Version** Broken: blender-2.70-47e9057-win64-vc12 Works: blender-2.70-47e9057-win64 **Short description of error** Loading movies larger than 4GB in size fails in Official Preview VS 2013 from buildbot. If I try to load a movie that has a filesize larger than 4GB in the Video Sequence Editor or Movie Clip Editor, it fails to load and I get an error message in the system console saying: anim file doesn't exist: VSE also shows an error dialog that file failed to load. MCE doesn't show that. This only happens in the "Official Preview VS 2013" versions from buildbot. The other "Official" versions from buildbot works fine. **Exact steps for others to reproduce the error** Open Blender. Choose Video Editing layout. Select Add - Movie and open a movie bigger than 4GB. Check system console for error message.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @soderlind

Added subscriber: @soderlind
Martijn Berger was assigned by Sergey Sharybin 2014-05-12 15:01:41 +02:00

Added subscribers: @MartijnBerger, @ThomasDinges, @Sergey

Added subscribers: @MartijnBerger, @ThomasDinges, @Sergey

@MartijnBerger, mind having a look? @ThomasDinges might also be interested here.

@MartijnBerger, mind having a look? @ThomasDinges might also be interested here.
Author

I would just like to make you aware that this bug is now also present in windows testbuild1 and 2.

I would just like to make you aware that this bug is now also present in windows testbuild1 and 2.
Martijn Berger removed their assignment 2014-05-28 14:00:13 +02:00
Sergey Sharybin was assigned by Martijn Berger 2014-05-28 14:00:13 +02:00
Member

@Sergey Assigning to you as I have to finish thesis.

@Sergey Assigning to you as I have to finish thesis.

This issue was referenced by 973f95fa9d

This issue was referenced by 973f95fa9dfb21e4347a510f119c55b9673f6076

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 973f95fa9d.

Closed by commit 973f95fa9d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40157
No description provided.